--- a/files/css/style_navbar.css
+++ b/files/css/style_navbar.css
@@ -1,6 +1,53 @@
-.overflow_scroll {
+@media screen and (max-width: 850px) {
+  .logo{
+  	left: -2vw !important;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .logo{
+  	left: -1.3vw !important;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .logo{
+  	left: -0.5vw !important;
+  }
+}
+.logo{
+	position:relative;
+	font-size:3.5vh;
+	cursor:default;
+	/*left:1vw;*/
+}
+.seperator {
     border-bottom: 1px solid #000;
-    border-bottom-width: 25%; 
+    /*border-bottom-width: 25%; */
+}
+.nav{
+	margin-top: 1vh;
+}
+.nav > li{
+	position: relative;
+	left: 2vw;
+	font-size: 2vh;
+	/*top: 0.5vh;*/
+}
+.nav-tabs > .active > a{
+	position: relative;
+	box-shadow: 0px -3px 10px -2px #888888;
+	font-weight: bold;
+}
+.nav-tabs > .inactive > a{
+	background-color: #1C5ECF;
+	color:#fff !important;
+}
+.nav-tabs > .inactive > a:hover{
+	color:#1C5ECF !important;
+}
+.brand > img{
+	position: relative;
+	top: -5px;
+	left: -5px;
 }
 /*brings navbar on scrollup*/
 header {
@@ -13,7 +60,7 @@ header {
   -webkit-transition: all 0.3s linear;
 }
 .default {
-  top: 0;
+  background-color:white;
 }
 .fixed {
   top: -180px;
@@ -22,7 +69,7 @@ header {
 /*Equally divide navigation bar links*/
 .customnavbar{
 	font-size: 2.5vh;
-	background-color: #daf6ed;
+	background-color: #fff;
 }
 .customnavbar ul a li{
 	display: inline-block;
@@ -33,18 +80,20 @@ header {
 	margin: 10px 0px 5px 0px;
 }
 .customnavbar ul a li:hover{
-	color: #4CD3AB;
+	color: #1C5ECF;
 }
 
 .search_area{
 	min-height: 13vh;
-	background-color: #daf6ed;
+	background-color: #fff;
 	font-size: 2.5vh;
 }
 
 .search_filter{
+	position: relative;
 	display: inline-block;
-	min-width: 7vw;
+	min-width: 7.5vw;
+	right: 2vw;
 }
 .search_filter img:hover{
 	cursor: pointer;
@@ -71,7 +120,7 @@ cartbutton{
 	display:inline-block;
 	position: relative;
 	padding: 0 1vw;
-	top: 3px;
+	/*top: 3px;*/
 	-ms-touch-action:manipulation;
 	touch-action:manipulation;
 	cursor:pointer;
@@ -89,14 +138,14 @@ cartbutton{
 }
 cartbutton:hover{
 	/*background-color: #4CD3AB;*/
-	color: #4CD3AB;
+	color: #1C5ECF;
 	/*box-shadow: 3px 3px 3px #888888;*/
 }
 loginbutton{
 	display:inline-block;
 	padding:5px 2vw;
 	margin:0 3vw;
-	font-size:1em;
+	font-size:2vh;
 	text-align:center;
 	white-space:nowrap;
 	vertical-align:middle;
@@ -108,14 +157,15 @@ loginbutton{
 	-ms-user-select:none;
 	user-select:none;
 	background-color: #fff;
-	color: #000;
-	border:1px solid #000;
-	border-radius:5px;
+	color: #1C5ECF;
+	border:1px solid #1C5ECF;
+	border-radius:50px;
 }
 loginbutton:hover{
-	background-color: #4CD3AB;
-	color: #000;
-	box-shadow: 3px 3px 3px #888888;
+	background-color: #1C5ECF;
+	color: #fff;
+	font-weight: bold;
+	/*box-shadow: 3px 3px 3px #888888;*/
 }
 .selected_filter{
 	display: inline-block;
