--- a/files/css/style_landing.css
+++ b/files/css/style_landing.css
@@ -1,26 +1,33 @@
 /*.grid-sizer, .grid-item {
   width: 25%;
 }
-
-@media screen and (max-width: 960px) {
-  .grid-sizer, .grid-item {
-    width: 33%;
-  }
-}
-@media screen and (max-width: 650px) {
-  .grid-sizer, .grid-item {
-    width: 50%;
-  }
+*/
+/*@media screen and (max-width: 960px) {
+	figure.effect-zoe p.icon-links a{
+		top: -3vh;
+	}  
 }*/
-.scrolls { 
-	overflow-x: scroll;
-	overflow-y: hidden;
-    white-space:nowrap
-} 
+/*@media only screen and (max-width: 550px) {
+  	figure.effect-zoe p.description {
+  		position: relative;
+		font-size: 10vh;
+		left:50vw;
+	}
+}*/
+.grey{
+	background-color: #ededed;
+}
+.white{
+	background-color: #ffffff;
+}
+.green{
+	color: #482E8B;
+}
+
+/*===========================================================PRODUCT GRID=======================================================================*/
+
 .grid {
-	position: relative;
 	margin: 0 auto;
-	padding: 1em 0 4em;
 	list-style: none;
 	text-align: center;
 }
@@ -28,18 +35,15 @@
 /* Common style */
 .grid figure {
 	position: relative;
-	float: left;
 	overflow: hidden;
 	margin: 10px 1%;
-	background: #3085a3;
 	text-align: center;
-	/*cursor: pointer;*/
 }
 
 .grid figure img {
 	position: relative;
 	display: block;
-	min-height: 100%;
+	min-height: 70%;
 	max-width: 100%;
 }
 
@@ -94,14 +98,6 @@
 	letter-spacing: 1px;
 	font-size: 68.5%;
 }
-
-.green{
-	color: #1C5ECF;
-}
-.products{
-	position: relative;
-	/*top: 30vh;*/
-}
 /*----------------------*/
 /***** Hover Effect *****/
 /*----------------------*/
@@ -110,7 +106,7 @@ figure.effect-zoe figcaption {
 	top: auto;
 	bottom: 0;
 	padding: 1em;
-	height: 3.75em;
+	height: 8vh;
 	background: #fff;
 	color: #3c4a50;
 	-webkit-transition: -webkit-transform 0.35s;
@@ -120,29 +116,35 @@ figure.effect-zoe figcaption {
 }
 
 figure.effect-zoe h2 {
+	position: relative;
 	float: left;
+	font-size: 2vh;
+	top: 0.5vh;
 }
 
-figure.effect-zoe p.icon-links a {
+figure.effect-zoe p.icon-links i {
+	position: relative;
 	float: right;
-	color: #3c4a50;
-	font-size: 2em;
+	/*color: #482E8B;*/
+	font-size: 3vh;
+	padding: 5px 0.5vw;
+	cursor: pointer;
 }
 
-figure.effect-zoe:hover p.icon-links a:hover,
-figure.effect-zoe:hover p.icon-links a:focus {
-	color: #252d31;
+figure.effect-zoe:hover p.icon-links i:hover,
+figure.effect-zoe:hover p.icon-links i:focus {
+	color: #482E8B;
 }
 
 figure.effect-zoe p.description {
 	position: absolute;
-	bottom: 8em;
-	left: 5em;
-	padding: 0.1em 1em;
+	bottom: 15vh;
+	left: 4vw;
+	padding: 0.1vh 1vw;
 	width: 60%;
 	color: #fff;
 	text-transform: none;
-	font-size: 70%;
+	font-size: 1vw;
 	opacity: 0;
 	/*border-radius: 5px;*/
 	cursor: pointer;
@@ -153,16 +155,15 @@ figure.effect-zoe p.description {
 }
 
 figure.effect-zoe h2,
-figure.effect-zoe p.icon-links a {
+figure.effect-zoe p.icon-links i{
 	-webkit-transition: -webkit-transform 0.35s;
 	transition: transform 0.35s;
 	-webkit-transform: translate3d(0,200%,0);
 	transform: translate3d(0,200%,0);
 }
 
-figure.effect-zoe p.icon-links a span::before {
+figure.effect-zoe p.icon-links i::before {
 	display: inline-block;
-	padding: 8px 10px;
 	speak: none;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -176,17 +177,18 @@ figure.effect-zoe:hover p.description {
 	opacity: 1;
 	border: 1px solid #000;
 	background-color:rgba(0, 0, 0, 0.5);
+	border-radius: 5px;
 }
 figure.effect-zoe{
 	border: 1px solid #fff;
 }
 figure.effect-zoe:hover{
-	border: 1px solid #000;
+	/*border: 1px solid #000;*/
 }
 
 figure.effect-zoe:hover figcaption,
 figure.effect-zoe:hover h2,
-figure.effect-zoe:hover p.icon-links a {
+figure.effect-zoe:hover p.icon-links i {
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 }
@@ -196,47 +198,53 @@ figure.effect-zoe:hover h2 {
 	transition-delay: 0.05s;
 }
 
-figure.effect-zoe:hover p.icon-links a:nth-child(3) {
+figure.effect-zoe:hover p.icon-links i:nth-child(3) {
 	-webkit-transition-delay: 0.1s;
 	transition-delay: 0.1s;
 }
 
-figure.effect-zoe:hover p.icon-links a:nth-child(2) {
+figure.effect-zoe:hover p.icon-links i:nth-child(2) {
 	-webkit-transition-delay: 0.15s;
 	transition-delay: 0.15s;
 }
 
-figure.effect-zoe:hover p.icon-links a:first-child {
+figure.effect-zoe:hover p.icon-links i:first-child {
 	-webkit-transition-delay: 0.2s;
 	transition-delay: 0.2s;
 }
-.deals{
-	height:75vh;
+
+.products{
+	position: relative;
+	top: 5vh;
+	clear: both;
+	border-radius: 10px;
 }
-.deals_right{
-	height: 75vh;
-	border-radius: 5px;
+.borders{
+	/*position: absolute;*/
+	border: 1px solid #F2F2F2;
+	/*border-radius: 10px;*/
+	background-color: #fff;
+	/*margin: 0.5vw;*/
+}
+.borders:hover{
+	-webkit-box-shadow:inset 0px 0px 0px 1px #482E8B;
+    -moz-box-shadow:inset 0px 0px 0px 1px #482E8B;
+    box-shadow:inset 0px 0px 0px 1px #482E8B;
+} 
+.display_info{
+	font-weight: bold;
+}
+.display_info .brand{
 	position: relative;
 	display: block;
-	margin-top:25vh;
+	padding: 0px 20px 0px 10px;
+	font-size: 2vh;
 }
-.deal_card{
-	min-height: 22vh;
-	border-bottom: 1px solid #000;
-}
-.deals > div > img{
+.price{
 	position: relative;
 	display: block;
-	margin-top:25vh;
-	min-height: 100%;
-	max-width: 100%;
-	/*z-index: 1;*/
+	font-size: 1em;
+	padding: 0px 20px 0px 10px;
+	color: #878787;
 }
-.deal_card > div > img{
-	position: relative;
-	/*margin: 1vh;*/
-	left: -2vh;
-	top:1vh;
-	max-height: 100%;
-	max-width: 100%;
-}
+/*===========================================================PRODUCT GRID COMPLETE=============================================================*/
