--- a/files/css/style_login.css
+++ b/files/css/style_login.css
@@ -29,17 +29,17 @@ loginbutton{
 	-moz-user-select:none;
 	-ms-user-select:none;
 	user-select:none;
-	background-color: #4CD3AB;
-	color: #ffffff;
-	border:1px solid #09587e;
+	background-color: #fff;
+	color: #1C5ECF;
+	border:1px solid #1C5ECF;
 	border-radius:4px;
-	font-weight: bold;
+	width: 70%;
 }
 loginbutton:hover{
-	background-color: #09587e;
+	background-color: #1C5ECF;
 	color: #ffffff;
-	border:1px solid #00FFAA;
-	font-weight: bolder;
+	border:1px solid #1C5ECF;
+	font-weight: bold;
 }
 .left_anchor{
 	position: relative;
@@ -47,5 +47,14 @@ loginbutton:hover{
 	top: 2vh;
 	height: 9vh;
 	width: 8px;
-	background-color: #09587e;
+	background-color: #1C5ECF;
+}
+.login_logo{
+	position: relative;
+	font-size: 7vh;
+	top: 2vh;
+}
+.img_logo > img{
+	height: 5%;
+	width: 5%;
 }
