--- a/files/css/style_navbar.css
+++ b/files/css/style_navbar.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 850px) {
+/* @media screen and (max-width: 850px) {
   .logo{
   	left: -2vw !important;
   }
@@ -7,63 +7,76 @@
   .logo{
   	left: -1.3vw !important;
   }
+  .filter_box{
+  	width: 7vw;
+  }
 }
 @media screen and (max-width: 1300px) {
   .logo{
   	left: -0.5vw !important;
   }
-}
+}*/
 .logo{
 	position:relative;
-	font-size:3.5vh;
+	font-size:4vh;
 	cursor:default;
-	/*left:1vw;*/
+	right:5px;
 }
 .seperator {
     border-bottom: 1px solid #000;
     /*border-bottom-width: 25%; */
 }
+.scrolls { 
+	overflow-x: scroll;
+	overflow-y: hidden;
+    white-space:nowrap
+}
 .nav{
-	margin-top: 1vh;
+	/*background-color: #f6f6f6;*/
+	padding-top: 1vh;
 }
 .nav > li{
 	position: relative;
 	left: 2vw;
 	font-size: 2vh;
-	/*top: 0.5vh;*/
+	top: 1vh;
 }
 .nav-tabs > .active > a{
 	position: relative;
-	box-shadow: 0px -3px 10px -2px #888888;
+	box-shadow: 0px -4.8px 10px -2px #888888;
 	font-weight: bold;
+	/*color: #fff !important;*/
+	background-color: #FAFAFA !important;
+	/*border-radius: 5px;*/
 }
 .nav-tabs > .inactive > a{
-	background-color: #1C5ECF;
+	background-color: #482E8B;
 	color:#fff !important;
+	font-weight: bold;
+	/*border: 1px solid #482E8B;*/
+	/*border-radius: 5px;*/
 }
 .nav-tabs > .inactive > a:hover{
-	color:#1C5ECF !important;
-}
-.brand > img{
-	position: relative;
-	top: -5px;
-	left: -5px;
+	color:#fff !important;
+	background-color: #482E8B;
 }
 /*brings navbar on scrollup*/
 header {
-  z-index: 1000;
-  position: fixed;
-  left: 0;
-  width: 100%;
-  transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
+	z-index: 10;
+	position: fixed;
+	left: 0;
+	width: 100%;
+	display: block;
+	transition: all 0.3s linear;
+	-moz-transition: all 0.3s linear;
+	-webkit-transition: all 0.3s linear;
 }
 .default {
-  background-color:white;
+	top: 0;
+  	background-color:white;
 }
 .fixed {
-  top: -180px;
+	top: -75px;
 }
 
 /*Equally divide navigation bar links*/
@@ -71,7 +84,7 @@ header {
 	font-size: 2.5vh;
 	background-color: #fff;
 }
-.customnavbar ul a li{
+.customnavbar div ul a li{
 	display: inline-block;
 	width: 18%;
 	text-align: center;
@@ -80,25 +93,18 @@ header {
 	margin: 10px 0px 5px 0px;
 }
 .customnavbar ul a li:hover{
-	color: #1C5ECF;
+	color: #482E8B;
 }
 
 .search_area{
-	min-height: 13vh;
-	background-color: #fff;
-	font-size: 2.5vh;
-}
-
-.search_filter{
+	display: block;
 	position: relative;
-	display: inline-block;
-	min-width: 7.5vw;
-	right: 2vw;
+	/*top: -10px;*/
+	min-height: 30vh;
+	background-color: #f8f8f8;
+	font-size: 2.5vh;
+	/*border-bottom: 1px solid #000;*/
 }
-.search_filter img:hover{
-	cursor: pointer;
-}
-
 .nav-tabs > .active > a, .nav-tabs > .active > a:hover { 
 	outline: 0;
 }
@@ -110,6 +116,11 @@ header {
 .brand{
 	max-width: 100vw;
 	text-align: center;
+}
+.brand > img{
+	position: relative;
+	/*top: -6px;*/
+	/*left: -3px;*/
 }
 .nav-right{
 	display: block;
@@ -138,13 +149,15 @@ cartbutton{
 }
 cartbutton:hover{
 	/*background-color: #4CD3AB;*/
-	color: #1C5ECF;
+	color: #482E8B;
 	/*box-shadow: 3px 3px 3px #888888;*/
 }
 loginbutton{
 	display:inline-block;
+	position: relative;
 	padding:5px 2vw;
 	margin:0 3vw;
+	top:-0.6vh;
 	font-size:2vh;
 	text-align:center;
 	white-space:nowrap;
@@ -157,12 +170,12 @@ loginbutton{
 	-ms-user-select:none;
 	user-select:none;
 	background-color: #fff;
-	color: #1C5ECF;
-	border:1px solid #1C5ECF;
+	color: #482E8B;
+	border:1px solid #482E8B;
 	border-radius:50px;
 }
 loginbutton:hover{
-	background-color: #1C5ECF;
+	background-color: #482E8B;
 	color: #fff;
 	font-weight: bold;
 	/*box-shadow: 3px 3px 3px #888888;*/
@@ -176,4 +189,32 @@ loginbutton:hover{
     font-size: 15px;
     display: inline-block;
     cursor: pointer;
+}
+.filter_box {
+	position: relative;
+	margin: 7vh auto;
+	list-style: none;
+	text-align: center;
+	display: inline-block;
+}
+
+.filter_box figure {
+	position: relative;
+	float: left;
+	/*overflow-x: scroll;*/
+	margin: 10px 1%;
+	text-align: center;
+}
+
+.filter_box figure img {
+	position: relative;
+	display: block;
+	min-height: 100%;
+	max-width: 100%;
+	margin-right: 50px;
+	margin-top: 20px;
+}
+
+.filter_box figure img:hover{
+	cursor: pointer;
 }
