--- a/files/css/style_landing.css
+++ b/files/css/style_landing.css
@@ -1,28 +1,116 @@
-/*.grid-sizer, .grid-item {
-  width: 25%;
-}
-*/
-/*@media screen and (max-width: 960px) {
-	figure.effect-zoe p.icon-links a{
-		top: -3vh;
-	}  
-}*/
-/*@media only screen and (max-width: 550px) {
-  	figure.effect-zoe p.description {
-  		position: relative;
-		font-size: 10vh;
-		left:50vw;
+@media screen and (max-width: 768px) {
+	.anchor{
+		top: -1vh !important;
+		height: 8vh !important;
 	}
-}*/
-.grey{
-	background-color: #ededed;
 }
-.white{
-	background-color: #ffffff;
+@media screen and (max-width: 500px) {
+	figure.effect-zoe p.description {
+		font-size: 1vh;
+	}	
 }
-.green{
-	color: #482E8B;
+
+::-webkit-scrollbar { 
+    display: none; 
 }
+.nav > li{
+	top: 3px !important;
+}
+.nav-tabs > .active > a{
+	background-color: #EFEFEF !important;
+}
+img:focus{
+	outline: 0;
+}
+/*==============================================================LOGIN MODAL====================================================================*/
+
+.bs-example-modal-sm{
+	top: 10vh;
+}
+.modal_height{
+	top: 15vh;
+}
+.modal_heading{
+	font-size:4vh;
+	padding: 2vh;
+	font-weight: 800;
+}
+.modal-dialog{
+	width: 320px;
+}
+.or{
+	position: relative;
+	top: -20px;
+	background-color: white;
+}
+a:hover{
+	cursor: pointer;
+	text-decoration: none;
+}
+.anchor{
+	position: relative;
+	top: 3vh;
+	height: 7vh;
+	width: 7px;
+	background-color: #482E8B;
+}
+.login_holder{
+	padding-bottom: 25px;
+}
+.Error{
+	font-size: 13px;
+	color: red;
+}
+.user{
+	font-size: 15px;
+}
+external-login{
+	display:inline-block;
+	padding:6.2px 10px;
+	margin:10px;
+	font-size:2.5vh;
+	font-weight:500;
+	line-height:1.42857143;
+	text-align:center;
+	white-space:nowrap;
+	vertical-align:middle;
+	-ms-touch-action:manipulation;
+	touch-action:manipulation;
+	cursor:pointer;
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	border: 1px solid white;
+	border-radius:4px;
+	width: 80%;
+	color: #fff;
+}
+.facebook_button{
+	background-color: #5C79AF;
+}
+.facebook_button:hover{
+	background-color: #fff;
+	color: #5C79AF !important;
+	border: 1px solid #5C79AF;
+}
+.google_button{
+	background-color: #DF473E;
+}
+.google_button:hover {
+	background-color: #fff;
+	color: #DF473E !important;
+	border: 1px solid #DF473E;	
+}
+.facebook_button i,
+.google_button i{
+	position: relative;
+	float: left;
+	top: 5px;
+	font-size: 3vh;
+}
+
+/*===========================================================LOGIN MODAL END====================================================================*/
 
 /*===========================================================PRODUCT GRID=======================================================================*/
 
@@ -30,6 +118,7 @@
 	margin: 0 auto;
 	list-style: none;
 	text-align: center;
+	display: block;
 }
 
 /* Common style */
@@ -43,7 +132,7 @@
 .grid figure img {
 	position: relative;
 	display: block;
-	min-height: 70%;
+	height: auto;
 	max-width: 100%;
 }
 
@@ -51,7 +140,7 @@
 	padding: 2em;
 	color: #000;
 	text-transform: uppercase;
-	font-size: 1.25em;
+	font-size: 1.5vh;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
@@ -86,7 +175,7 @@
 }
 
 .grid figure h2 span {
-	font-weight: 800;
+	font-weight: 400;
 }
 
 .grid figure h2,
@@ -125,7 +214,8 @@ figure.effect-zoe h2 {
 figure.effect-zoe p.icon-links i {
 	position: relative;
 	float: right;
-	/*color: #482E8B;*/
+	color: #482E8B;
+	outline: 0;
 	font-size: 3vh;
 	padding: 5px 0.5vw;
 	cursor: pointer;
@@ -139,21 +229,23 @@ figure.effect-zoe:hover p.icon-links i:focus {
 figure.effect-zoe p.description {
 	position: absolute;
 	bottom: 15vh;
-	left: 4vw;
-	padding: 0.1vh 1vw;
-	width: 60%;
+	left: 15%;
+	padding: 0.3vh 1vw;
+	width: 70%;
 	color: #fff;
 	text-transform: none;
-	font-size: 1vw;
+	font-size: 2vh;
 	opacity: 0;
-	/*border-radius: 5px;*/
 	cursor: pointer;
-	/*background-color: #000;*/
 	-webkit-transition: opacity 0.35s;
 	transition: opacity 0.35s;
 	-webkit-backface-visibility: hidden; /* Fix for Chrome 37.0.2062.120 (Mac) */
 }
-
+.description span{
+	float: left;
+	top: 5px;
+	font-size: 1.8vh;
+}
 figure.effect-zoe h2,
 figure.effect-zoe p.icon-links i{
 	-webkit-transition: -webkit-transform 0.35s;
@@ -214,22 +306,22 @@ figure.effect-zoe:hover p.icon-links i:first-child {
 }
 
 .products{
+	display: block;
 	position: relative;
 	top: 5vh;
+	margin-bottom:15vh;
 	clear: both;
 	border-radius: 10px;
 }
 .borders{
-	/*position: absolute;*/
 	border: 1px solid #F2F2F2;
-	/*border-radius: 10px;*/
 	background-color: #fff;
-	/*margin: 0.5vw;*/
 }
 .borders:hover{
 	-webkit-box-shadow:inset 0px 0px 0px 1px #482E8B;
     -moz-box-shadow:inset 0px 0px 0px 1px #482E8B;
     box-shadow:inset 0px 0px 0px 1px #482E8B;
+    cursor: pointer;
 } 
 .display_info{
 	font-weight: bold;
@@ -243,8 +335,81 @@ figure.effect-zoe:hover p.icon-links i:first-child {
 .price{
 	position: relative;
 	display: block;
-	font-size: 1em;
+	font-size: 2vh;
+	font-weight: bold;
 	padding: 0px 20px 0px 10px;
 	color: #878787;
 }
 /*===========================================================PRODUCT GRID COMPLETE=============================================================*/
+/*===========================================================FOOTER AREA=======================================================================*/
+footer{
+	background-color: #efefef;
+	color: #827777;
+	display: block;
+	min-height: 10vh;
+	width: 100%;
+	text-align: left;
+	padding: 50px 0px;
+}
+.footer_head{
+	color: #5b5353;
+	font-weight: bold;
+	border-bottom: 1px solid #8f8f8f;
+	margin: 10px 0px;
+}
+.footer_content,
+.footer_content a{
+	color: #827777;
+	font-weight: 400;
+	list-style: none;
+}
+.footer_content a:hover{
+	color: #482E8B;
+}
+.social_media{
+	margin-top: 20px;
+}
+.social_media_heading{
+	font-weight: bold;
+	font-size: 2.5vh;
+	margin-bottom: 10px;
+}
+.icon-set{
+	font-size: 3vh;
+	position: relative;
+}
+.fa-stack{
+	position: relative;
+    width: 2em;
+    height: 2em;
+    line-height: 2em;
+    vertical-align: middle;
+}
+.fa-stack-2x,
+.fa-stack-1x{
+	position: absolute;
+    left: 0;
+    width: 100%;
+    text-align: center;
+	margin-left: 20px;
+}
+.icons{
+	margin-right: 25px;
+}
+.fb:hover{
+	color: #3b5998;
+	cursor: pointer;
+}
+.twitter:hover{
+	color: #00aced;
+	cursor: pointer;
+}
+.google:hover{
+	color: #dd4b39;
+	cursor: pointer;
+}
+.insta:hover{
+	color: #000;
+	cursor: pointer;
+}
+/*===========================================================FOOTER AREA COMPLETE==============================================================*/
