--- a/files/css/style_navbar.css
+++ b/files/css/style_navbar.css
@@ -1,29 +1,11 @@
-/* @media screen and (max-width: 850px) {
-  .logo{
-  	left: -2vw !important;
-  }
+*{
+	outline: 0;
 }
-@media screen and (max-width: 1200px) {
-  .logo{
-  	left: -1.3vw !important;
-  }
-  .filter_box{
-  	width: 7vw;
-  }
-}
-@media screen and (max-width: 1300px) {
-  .logo{
-  	left: -0.5vw !important;
-  }
-}*/
-.logo{
-	position:relative;
-	font-size:4vh;
-	cursor:default;
-	right:5px;
+.nomargin{
+	margin: 0;
+	padding: 0;
 }
 .nav{
-	/*background-color: #f6f6f6;*/
 	padding-top: 1vh;
 }
 .nav > li{
@@ -42,14 +24,28 @@
 	background-color: #482E8B;
 	color:#fff !important;
 	font-weight: bold;
-	/*border: 1px solid #482E8B;*/
-	/*border-radius: 5px;*/
 }
 .nav-tabs > .inactive > a:hover{
 	color:#482E8B !important;
 	border: 1px solid #482E8B;
+	border-bottom: none;
 	background-color: #fff;
 }
+.nav-tabs{
+	font-size: 1em;
+}
+/*area to display fadstreet Brand*/
+.brand{
+	max-width: 100vw;
+	text-align: center;
+}
+.nav-right{
+	display: block;
+	float: right;
+	margin: 3px 5px;
+}
+
+/*===========================================================ICON FILTER AREA==================================================================*/
 /*brings navbar on scrollup*/
 header {
 	z-index: 100;
@@ -70,6 +66,7 @@ header {
 .fixed {
 	top: -75px;
 }
+
 .brand_color{
 	color:#482E8B;
 }
@@ -87,8 +84,7 @@ header {
 .filter_icons{
 	display: block;
 	position: relative;
-	top: 6vh;
-	overflow: hidden;
+	top: 10vh;
 }
 .scrolls { 
 	display: block;
@@ -97,33 +93,46 @@ header {
     white-space:nowrap;
     position: relative;
 }
-.nav-tabs > .active > a, .nav-tabs > .active > a:hover { 
-	outline: 0;
-}
-
-.nav-tabs{
-	font-size: 1em;
-}
-/*area to display fadstreet Brand*/
-.brand{
-	max-width: 100vw;
-	text-align: center;
-}
-.brand > img{
+.selected_filter{
+	display: inline-block;
 	position: relative;
-	/*top: -6px;*/
-	/*left: -3px;*/
+	min-width: 5vw;
 }
-.nav-right{
-	display: block;
-	float: right;
-	margin: 3px 5px;
+#filter1 i{
+	position: absolute;
+	margin: 2% 2.5%;
+	display: none;
 }
+#filter2 i{
+	position: absolute;
+	margin: 2% 2.1%;
+	display: none;
+}
+.search_filter{
+	display: inline-block;
+	min-width: 3vw;
+}
+.sub_filter{
+	display: inline-block;
+	min-width: 3vw;	
+}
+.hide-button {
+    float: right;
+    font-size: 15px;
+    display: inline-block;
+    cursor: pointer;
+}
+.firstFilter{
+	position: relative;
+	left: -40vw;
+}
+/*===========================================================ICON FILTER AREA END==============================================================*/
+
+/*===========================================================PAGE BUTTONS======================================================================*/
 cartbutton{
 	display:inline-block;
 	position: relative;
 	padding: 0 1vw;
-	/*top: 3px;*/
 	-ms-touch-action:manipulation;
 	touch-action:manipulation;
 	cursor:pointer;
@@ -131,18 +140,15 @@ cartbutton{
 	-moz-user-select:none;
 	-ms-user-select:none;
 	user-select:none;
-	background-color: #fff;
+	background-color: inherit;
 	color: #000;
-	/*border:1px solid #000;*/
-	/*-moz-border-radius: 50px;*/
-	/*-webkit-border-radius: 50px;*/
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	font-size: 3vh;
 }
 cartbutton:hover{
-	/*background-color: #4CD3AB;*/
 	color: #482E8B;
-	/*box-shadow: 3px 3px 3px #888888;*/
 }
 loginbutton{
 	display:inline-block;
@@ -173,55 +179,208 @@ loginbutton:hover{
 	background-color: #482E8B;
 	color: #fff;
 }
-.selected_filter{
-	display: inline-block;
-	min-width: 5vw;
-}
-#filter1 i{
-	position: absolute;
-	margin: 2% 2.5%;
-	display: none;
-}
-#filter2 i{
-	position: absolute;
-	margin: 2% 2.1%;
-	display: none;
-}
-.search_filter{
-	display: inline-block;
-	min-width: 3vw;
-	/*padding: 20px;*/
-}
-.hide-button {
-    float: right;
-    font-size: 15px;
-    display: inline-block;
-    cursor: pointer;
-}
-.filter_box {
-	position: relative;
-	margin: 7vh auto;
-	list-style: none;
-	text-align: center;
-	display: inline-block;
-}
+/*===========================================================PAGE BUTTONS END==================================================================*/
 
-.filter_box figure {
+/*==============================================================LOGIN MODAL====================================================================*/
+
+.bs-example-modal-sm{
+	top: 10vh;
+}
+.modal_height{
+	top: 15vh;
+}
+.modal_heading{
+	font-size:4vh;
+	padding: 2vh;
+	font-weight: 800;
+}
+.modal-dialog{
+	width: 320px;
+}
+.or{
+	position: relative;
+	top: -20px;
+	background-color: white;
+}
+a:hover{
+	cursor: pointer;
+	text-decoration: none;
+}
+.anchor{
+	position: relative;
+	top: 3vh;
+	height: 7vh;
+	width: 7px;
+	background-color: #482E8B;
+}
+.login_holder{
+	padding-bottom: 25px;
+}
+.Error{
+	font-size: 13px;
+	color: red;
+}
+.user{
+	font-size: 15px;
+}
+external-login{
+	display:inline-block;
+	padding:6.2px 10px;
+	margin:10px;
+	font-size:2.5vh;
+	font-weight:500;
+	line-height:1.42857143;
+	text-align:center;
+	white-space:nowrap;
+	vertical-align:middle;
+	-ms-touch-action:manipulation;
+	touch-action:manipulation;
+	cursor:pointer;
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	border: 1px solid white;
+	border-radius:4px;
+	width: 80%;
+	color: #fff;
+}
+.facebook_button{
+	background-color: #5C79AF;
+}
+.facebook_button:hover{
+	background-color: #fff;
+	color: #5C79AF !important;
+	border: 1px solid #5C79AF;
+}
+.google_button{
+	background-color: #DF473E;
+}
+.google_button:hover {
+	background-color: #fff;
+	color: #DF473E !important;
+	border: 1px solid #DF473E;	
+}
+.facebook_button i,
+.google_button i{
 	position: relative;
 	float: left;
-	margin: 10px 1%;
-	text-align: center;
+	top: 5px;
+	font-size: 3vh;
 }
 
-.filter_box figure img {
-	position: relative;
+/*===========================================================LOGIN MODAL END====================================================================*/
+
+/*===========================================================FOOTER AREA=======================================================================*/
+footer{
 	display: block;
-	min-height: 100%;
-	max-width: 100%;
-	margin-right: 50px;
+	background-color: #efefef;
+	color: #827777;
+	min-height: 10vh;
+	width: 100%;
+	text-align: left;
+	margin-top: 10vh;
+	padding: 50px 0px;
+}
+.footer_head{
+	color: #5b5353;
+	font-weight: bold;
+	border-bottom: 1px solid #8f8f8f;
+	margin: 10px 0px;
+}
+.footer_content,
+.footer_content a{
+	color: #827777;
+	font-weight: 400;
+	list-style: none;
+}
+.footer_content a:hover{
+	color: #482E8B;
+}
+.social_media{
 	margin-top: 20px;
 }
-
-.filter_box figure img:hover{
+.social_media_heading{
+	font-weight: bold;
+	font-size: 2.5vh;
+	margin-bottom: 10px;
+}
+.icon-set{
+	font-size: 3vh;
+	position: relative;
+}
+.fa-stack{
+	position: relative;
+    width: 2em;
+    height: 2em;
+    line-height: 2em;
+    vertical-align: middle;
+}
+.fa-stack-2x,
+.fa-stack-1x{
+	position: absolute;
+    left: 0;
+    width: 100%;
+    text-align: center;
+	margin-left: 20px;
+}
+.icons{
+	margin-right: 25px;
+}
+.fb:hover{
+	color: #3b5998;
 	cursor: pointer;
+}
+.twitter:hover{
+	color: #00aced;
+	cursor: pointer;
+}
+.google:hover{
+	color: #dd4b39;
+	cursor: pointer;
+}
+.insta:hover{
+	color: #000;
+	cursor: pointer;
+}
+/*===========================================================FOOTER AREA COMPLETE==============================================================*/
+/*===========================================================WEBPAGE RESPONSIVENESS============================================================*/
+@media screen and (max-width: 768px) {
+	.anchor{
+		top: -1vh !important;
+		height: 8vh !important;
+	}
+}
+@media screen and (max-width: 500px) {
+	figure.effect-zoe p.description {
+		font-size: 1vh;
+	}	
+}
+@media screen and (min-width: 1800px) {
+	figure.effect-zoe p.description {
+		font-size: 1.5vh;
+	}
+	.social_media_heading{
+		font-size: 2vh;
+	}
+	.icon-set{
+		font-size: 2vh;
+	}
+	figure.effect-zoe h2 {
+		font-size: 1.5vh;
+		font-weight: bolder;
+	}
+	figure.effect-zoe figcaption {
+		height: 6vh;
+	}
+	figure.effect-zoe p.icon-links i {
+		font-size: 2vh;
+	}
+	.display_info .brand{
+		font-size: 1.5vh;
+	}
+	.price{
+		font-size: 1.5vh;
+	}
+
 }
