--- a/files/css/style_nearby.css
+++ b/files/css/style_nearby.css
@@ -1,3 +1,6 @@
+.nav > li{
+	top: 1px !important;
+}
 a {
     text-decoration: none;
 }
@@ -58,4 +61,13 @@ input {
     background: transparent;
     border-bottom: 2px solid black;
     width: 20px;
+}
+.seperator a{
+	text-decoration: none;
+	display: inline-block;
+	margin-left: 100px;
+	list-style: none;
+	color: #000;
+	font-size: 20px;
+	margin-top: 5px;
 }
